...
          <Text style={styles.title}>{title}</Text>
          <View style={[styles.divider, { backgroundColor: color }]} />
          
          <Text style={styles.message}>{message}</Text>
          
          <TouchableOpacity style={[styles.button, { backgroundColor: color }]} onPress={onClose}>
            <Text style={styles.buttonText}>Entendido</Text>
          </TouchableOpacity>
        </View>
      </View>
    </Modal>
  );
}
...
